<resources>
    <string name="app_name">Kanban.Danmu</string>
    <string name="title">Danmu for QQ</string>

    <!-- Preferences -->
    <string name="prefs_cats_general">General</string>
        <string name="prefs_enable">Enable</string>
        <string name="prefs_debug" >Debug</string>
        <string name="prefs_debug_summary" >Show fps,time,cache,miss</string>
        <string name="prefs_test">Test</string>

    <string name="prefs_cats_style">Style</string>
        <string name="prefs_style_size">Text Size</string>
        <string name="prefs_style_size_summary">default: 24</string>

        <string name="prefs_style_color">Text Color</string>
        <string name="prefs_style_color_summary">default: Black</string>

        <string name="prefs_style_shadow">Shadow</string>
        <string name="prefs_style_shadow_summary">default: show</string>

    <string name="prefs_cats_about">About</string>
        <string name="prefs_app_version">Application version</string>
        <string name="prefs_app_rate">Rate App</string>
        <string name="prefs_app_feedback">Feedback</string>
        <string name="prefs_app_donate">Donate</string>
        <string name="prefs_app_donate_summary">Alipay: i@gitai.me ($1)</string>

</resources>
